feat: implement Spring Security configuration with JWT authentication and custom CORS settings