@@ -1,5 +1,6 @@
 package com.project.bars.config;
 
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
@@ -17,10 +18,20 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
 public class SecurityConfig {
+
+    /**
+     * Comma-separated list of allowed origins injected from:
+     *   - application-prod.properties → app.cors.allowed-origins (set via ALLOWED_ORIGINS env var on Render)
+     *   - Falls back to localhost for local development
+     */
+    @Value("${app.cors.allowed-origins:http://localhost:5173,http://localhost:5174,http://127.0.0.1:5173}")
+    private String allowedOriginsRaw;
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http,
@@ -57,10 +68,20 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOriginPatterns(List.of(
+
+        // Build allowed origins list: always include localhost wildcards, plus any configured origins
+        List<String> origins = new ArrayList<>(Arrays.asList(
                 "http://localhost:*",
                 "http://127.0.0.1:*"
         ));
+        if (allowedOriginsRaw != null && !allowedOriginsRaw.isBlank()) {
+            Arrays.stream(allowedOriginsRaw.split(","))
+                    .map(String::trim)
+                    .filter(s -> !s.isEmpty())
+                    .forEach(origins::add);
+        }
+        configuration.setAllowedOriginPatterns(origins);
+
         configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
         configuration.setAllowedHeaders(List.of("*"));
         configuration.setExposedHeaders(List.of("Authorization"));
